<resources>
    <string name="app_name">InventoryApp2</string>
    <string name="action_settings">Settings</string>
    <string name="supplier">Supplier</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="empty_text_title">No item is available</string>
    <string name="get_started_by_adding_product">Get started by adding product</string>
    <string name="delete_all">delete all</string>
    <string name="buy_msg_confirm">Item has been sold</string>
    <string name="error_msg_stock_update">Issue with upload value of quantity</string>
    <string name="no_product_in_stock">No available product in stock</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit_title">Edit Product</string>
    <string name="new_product_title">Add a Product</string>
    <string name="failed_insert">Error with saving Product</string>
    <string name="saved_product">Product saved</string>
    <string name="failed_update">Error with updating Product</string>
    <string name="product_updated">Product updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="discard">Discard</string>
    <string name="message">Please fill the form</string>

</resources>
